--- a/back/docker-compose.prod.yml
+++ b/back/docker-compose.prod.yml
@@ -5,23 +5,16 @@ services:
   php:
     build:
       context: ./api
-      target: php_prod
+      target: frankenphp_prod
     environment:
       APP_SECRET: ${APP_SECRET}
-      MERCURE_JWT_SECRET: ${CADDY_MERCURE_JWT_SECRET}
+      MERCURE_PUBLISHER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET}
+      MERCURE_SUBSCRIBER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET}
 
   pwa:
      build:
       context: ./pwa
       target: prod
-
-  caddy:
-    build:
-      context: ./api/
-      target: caddy_prod
-    environment:
-      MERCURE_PUBLISHER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET}
-      MERCURE_SUBSCRIBER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET}
 
   database:
     environment:
