--- a/front/package.json
+++ b/front/package.json
@@ -18,9 +18,11 @@
   "devDependencies": {
     "@playwright/test": "^1.39.0",
     "@types/node": "^20.8.6",
+    "@vitejs/plugin-react": "^4.1.0",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "jsdom": "^22.1.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vitest": "^0.34.6"
