--- a/back/api/composer.json
+++ b/back/api/composer.json
@@ -13,6 +13,7 @@
         "lexik/jwt-authentication-bundle": "^2.19",
         "nelmio/cors-bundle": "^2.2",
         "phpstan/phpdoc-parser": "^1.16",
+        "resend/resend-php": "^v0.9.0",
         "runtime/frankenphp-symfony": "^0.1.1",
         "symfony/asset": "6.3.*",
         "symfony/console": "6.3.*",
