--- a/back/api/config/packages/security.yaml
+++ b/back/api/config/packages/security.yaml
@@ -38,9 +38,12 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
 
+        - { path: ^/$, roles: PUBLIC_ACCESS } # Allows accessing the Swagger UI
+        - { path: ^/docs, roles: PUBLIC_ACCESS } # Allows accessing the Swagger UI docs
+        - { path: ^/auth, roles: PUBLIC_ACCESS }
+        - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/auth/(login|register), roles: PUBLIC_ACCESS }
         - { path: ^/token/refresh, roles: PUBLIC_ACCESS }
-
 
 when@test:
     security:
