--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,16 +4,63 @@ on:
 jobs:
   ci-back:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: front
 
     steps:
-      - name: Checkout
+      -
+        name: Checkout
         uses: actions/checkout@v4
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Setup php
-        uses: shivammathur/setup-php@v2
+      - name: Cache Docker layers
+        uses: actions/cache@v3
         with:
-          php-version: '8.2'
+          path: |
+            ~/.docker
+          key: ${{ runner.os }}-docker-${{ hashFiles('**/Dockerfile') }}
+          restore-keys: |
+            ${{ runner.os }}-docker-
 
+      - name: Build Docker images
+        uses: docker/bake-action@v4
+        with:
+          pull: true
+          load: true
+          files: |
+            compose.yaml
+            compose.override.yaml
+          set: |
+            *.cache-from=type=gha,scope=${{github.ref}}
+            *.cache-from=type=gha,scope=refs/heads/main
+            *.cache-to=type=gha,scope=${{github.ref}},mode=max
+
+      - name: Start services
+        run: docker compose up --wait --no-build
+
+      - name: Check HTTP reachability
+        run: curl -v -o /dev/null http://localhost
+
+      - name: Check API reachability
+        run: curl -vk -o /dev/null https://localhost
+
+      - name: Check PWA reachability
+        run: "curl -vk -o /dev/null -H 'Accept: text/html' https://localhost"
+
+      - name: Create test database
+        run: docker compose exec -T php bin/console -e test doctrine:database:create
+
+      - name: Run migrations
+        run: docker compose exec -T php bin/console -e test doctrine:migrations:migrate --no-interaction
+
+      - name: Run PHPUnit tests
+        run: docker compose exec -T php bin/phpunit
+
+      - name: Doctrine Schema Validator
+        run: docker compose exec -T php bin/console -e test doctrine:schema:validate
 
   ci-front:
     needs: ci-back
