--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,16 +4,12 @@ on:
 jobs:
   ci-back:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: back
 
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v4
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Cache Docker layers
@@ -28,6 +24,7 @@ jobs:
       - name: Build Docker images
         uses: docker/bake-action@v4
         with:
+          workdir: back
           pull: true
           load: true
           files: |
