--- a/back/api/config/packages/security.yaml
+++ b/back/api/config/packages/security.yaml
@@ -11,6 +11,11 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        login:
+            pattern: ^/auth/(login|register)
+            stateless: true
+            json_login:
+                check_path: auth_login
         main:
             lazy: true
             provider: app_user_provider
