--- a/back/api/config/packages/security.yaml
+++ b/back/api/config/packages/security.yaml
@@ -8,6 +8,9 @@ security:
         app_user_provider:
             id: App\Security\UserProvider
     firewalls:
+        auth_routes:
+            pattern: ^/auth/register
+            security: false
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
@@ -17,7 +20,7 @@ security:
             stateless: true
             entry_point: jwt
             json_login:
-                check_path: /auth/login # The name in routes.yaml is enough for mapping
+                check_path: /auth/login  # The name in routes.yaml is enough for mapping
                 username_path: email
                 password_path: password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
@@ -39,8 +42,7 @@ security:
         - { path: ^/docs, roles: PUBLIC_ACCESS } # Allows accessing the Swagger UI docs
         - { path: ^/auth, roles: PUBLIC_ACCESS }
         - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
-        - { path: ^/auth/(login|register), roles: PUBLIC_ACCESS }
-        - { path: ^/token/refresh, roles: PUBLIC_ACCESS }
+
 
 
 when@test:
