--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,6 +39,7 @@ jobs:
             *.cache-to=type=gha,scope=${{github.ref}},mode=max
 
       - name: Start services
+        working-directory: ./back
         run: docker compose up --wait --no-build
 
       - name: Check HTTP reachability
