--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,10 +37,10 @@ jobs:
 
       - name: Start services
         working-directory: ./back
-        run: docker compose up --wait --no-build
-
-      - name: Logs docker
-        run: docker logs back-php-1
+        run:  docker compose up --wait --no-build &
+              sleep 5
+              wait 
+              docker logs -f back-php-1
 
       - name: Check HTTP reachability
         run: curl -v -o /dev/null http://localhost
