--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,8 +2,63 @@ on:
   pull_request:
 
 jobs:
-  ci-back:
+#  ci-back:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2  # Use actions/checkout@v2 instead of v4
+#
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v3
+#
+#      - name: Cache Docker layers
+#        uses: actions/cache@v2  # Use actions/cache@v2 instead of v3
+#        with:
+#          path: |
+#            ~/.docker
+#          key: ${{ runner.os }}-docker-${{ hashFiles('**/Dockerfile') }}
+#          restore-keys: |
+#            ${{ runner.os }}-docker-
+#
+#      - name: Build Docker images
+#        uses: docker/build-push-action@v2  # Use docker/build-push-action@v2
+#        with:
+#          context: ./back
+#          file: ./back/docker-compose.yml
+#          tags: ${{ github.ref }}
+#          push: true
+#
+#      - name: Start services
+#        working-directory: ./back
+#        run: |
+#          docker-compose up --detach
+#          docker-compose logs -f back-php-1
+#
+#      - name: Check HTTP reachability
+#        run: curl -v -o /dev/null http://localhost
+#
+#      - name: Check API reachability
+#        run: curl -vk -o /dev/null https://localhost
+#
+#      - name: Check PWA reachability
+#        run: "curl -vk -o /dev/null -H 'Accept: text/html' https://localhost"
+#
+#      - name: Create test database
+#        run: docker-compose exec -T php bin/console -e test doctrine:database:create
+#
+#      - name: Run migrations
+#        run: docker-compose exec -T php bin/console -e test doctrine:migrations:migrate --no-interaction
+#
+#      - name: Run PHPUnit tests
+#        run: docker-compose exec -T php bin/phpunit
+#
+#      - name: Doctrine Schema Validator
+#        run: docker-compose exec -T php bin/console -e test doctrine:schema:validate
+
+  ci-front:
     runs-on: ubuntu-latest
+    # needs: ci-back
 
     steps:
       - name: Checkout
@@ -22,77 +77,25 @@ jobs:
             ${{ runner.os }}-docker-
 
       - name: Build Docker images
-        uses: docker/bake-action@v4
+        uses: docker/build-push-action@v3
         with:
-          workdir: ./back
-          pull: true
-          load: true
-          files: |
-            docker-compose.yml
-            docker-compose.override.yml
-          set: |
-            *.cache-from=type=gha,scope=${{github.ref}}
-            *.cache-from=type=gha,scope=refs/heads/main
-            *.cache-to=type=gha,scope=${{github.ref}},mode=max
+          context: ./front
+          file: ./front/docker-compose.yml
+          tags: ${{ github.ref }}
+          push: true
 
       - name: Start services
-        working-directory: ./back
-        run:  docker compose up --wait --no-build |
-              docker logs -f back-php-1
+        working-directory: ./front
+        run: docker-compose up --detach
 
-      - name: Check HTTP reachability
-        run: curl -v -o /dev/null http://localhost
+      - name: Build
+        run: docker-compose exec node pnpm run build
 
-      - name: Check API reachability
-        run: curl -vk -o /dev/null https://localhost
+      - name: Install Playwright dependencies
+        run: docker-compose exec node pnpm dlx playwright install --with-deps
 
-      - name: Check PWA reachability
-        run: "curl -vk -o /dev/null -H 'Accept: text/html' https://localhost"
+      - name: Run Playwright tests
+        run: docker-compose exec node pnpm run test:e2e
 
-      - name: Create test database
-        run: docker compose exec -T php bin/console -e test doctrine:database:create
-
-      - name: Run migrations
-        run: docker compose exec -T php bin/console -e test doctrine:migrations:migrate --no-interaction
-
-      - name: Run PHPUnit tests
-        run: docker compose exec -T php bin/phpunit
-
-      - name: Doctrine Schema Validator
-        run: docker compose exec -T php bin/console -e test doctrine:schema:validate
-
-  ci-front:
-    needs: ci-back
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-            path: |
-                ~/.docker
-            key: ${{ runner.os }}-docker-${{ hashFiles('**/Dockerfile') }}
-            restore-keys: |
-                ${{ runner.os }}-docker-
-
-      - name: Build Docker images
-        uses: docker/bake-action@v4
-        with:
-            workdir: ./front
-            pull: true
-            load: true
-            files: |
-                docker-compose.yml
-            set: |
-                *.cache-from=type=gha,scope=${{github.ref}}
-                *.cache-from=type=gha,scope=refs/heads/main
-                *.cache-to=type=gha,scope=${{github.ref}},mode=max
-
-      - name: Start services
-        run: docker compose up --wait
+      - name: Run Vitest tests
+        run: docker-compose exec node pnpm run test
