--- a/back/api/composer.json
+++ b/back/api/composer.json
@@ -10,10 +10,10 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.16",
         "gesdinet/jwt-refresh-token-bundle": "^1.1",
+        "getbrevo/brevo-php": "1.x.x",
         "lexik/jwt-authentication-bundle": "^2.19",
         "nelmio/cors-bundle": "^2.2",
         "phpstan/phpdoc-parser": "^1.16",
-        "resend/resend-php": "^v0.9.0",
         "runtime/frankenphp-symfony": "^0.1.1",
         "symfony/asset": "6.3.*",
         "symfony/console": "6.3.*",
