--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,13 +7,13 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2  # Use actions/checkout@v2 instead of v4
+        uses: actions/checkout@v4  # Use actions/checkout@v2 instead of v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Cache Docker layers
-        uses: actions/cache@v2  # Use actions/cache@v2 instead of v3
+        uses: actions/cache@v3  # Use actions/cache@v2 instead of v3
         with:
           path: |
             ~/.docker
@@ -22,7 +22,7 @@ jobs:
             ${{ runner.os }}-docker-
 
       - name: Build Docker images
-        uses: docker/build-push-action@v2  # Use docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: ./back
           file: ./back/docker-compose.yml
