--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,13 +7,13 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4  # Use actions/checkout@v2 instead of v4
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Cache Docker layers
-        uses: actions/cache@v3  # Use actions/cache@v2 instead of v3
+        uses: actions/cache@v3
         with:
           path: |
             ~/.docker
@@ -58,7 +58,7 @@ jobs:
 
   ci-front:
     runs-on: ubuntu-latest
-    # needs: ci-back
+    needs: ci-back
 
     steps:
       - name: Checkout
