--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,12 +22,18 @@ jobs:
             ${{ runner.os }}-docker-
 
       - name: Build Docker images
-        uses: docker/build-push-action@v5
+        uses: docker/bake-action@v4
         with:
-          context: ./back
-          file: ./back/docker-compose.yml
-          tags: ${{ github.ref }}
-          push: true
+            workdir: ./back
+            pull: true
+            load: true
+            files: |
+              compose.yaml
+              compose.override.yaml
+            set: |
+              *.cache-from=type=gha,scope=${{github.ref}}
+              *.cache-from=type=gha,scope=refs/heads/main
+              *.cache-to=type=gha,scope=${{github.ref}},mode=max
 
       - name: Start services
         working-directory: ./back
