--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,7 +39,7 @@ jobs:
         working-directory: ./back
         run: |
           docker-compose up --detach
-          docker-compose logs -f back-php-1
+          docker-compose logs -f php
 
       - name: Check HTTP reachability
         run: curl -v -o /dev/null http://localhost
