Add debug trace for containers

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,6 +48,9 @@ jobs:
       - name: Check PWA reachability
         run: "curl -vk -o /dev/null -H 'Accept: text/html' https://localhost"
 
+      - name : List all containers
+        run : docker ps -aq
+
       - name: Create test database
         run: docker compose exec -T php bin/console -e test doctrine:database:create
 
