--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,7 @@ jobs:
         run: "curl -vk -o /dev/null -H 'Accept: text/html' https://localhost"
 
       - name : List all containers
-        run : docker ps -aq
+        run : docker ps
 
       - name: Create test database
         run: docker compose exec -T php bin/console -e test doctrine:database:create
