Add default workdir

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,9 @@ on:
 jobs:
   ci-back:
     runs-on: ubuntu-latest
+    defaults:
+        run:
+            working-directory: back
 
     steps:
       - name: Checkout
@@ -47,9 +50,6 @@ jobs:
 
       - name: Check PWA reachability
         run: "curl -vk -o /dev/null -H 'Accept: text/html' https://localhost"
-
-      - name : List all containers
-        run : docker ps
 
       - name: Create test database
         run: docker compose exec -T php bin/console -e test doctrine:database:create
