--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,7 +39,6 @@ jobs:
               *.cache-to=type=gha,scope=${{github.ref}},mode=max
 
       - name: Start services
-        working-directory: ./back
         run: docker compose up --wait --no-build
 
       - name: Check HTTP reachability
@@ -66,6 +65,9 @@ jobs:
   ci-front:
     runs-on: ubuntu-latest
     needs: ci-back
+    defaults:
+        run:
+            working-directory: front
 
     steps:
       - name: Checkout
@@ -84,11 +86,18 @@ jobs:
             ${{ runner.os }}-docker-
 
       - name: Build Docker images
-        uses: docker/build-push-action@v3
+        uses: docker/bake-action@v4
         with:
-          context: ./front
-          tags: ${{ github.ref }}
-          push: true
+          workdir: front
+          pull: true
+          load: true
+          files: |
+            docker-compose.yml
+            docker-compose.override.yml
+          set: |
+            *.cache-from=type=gha,scope=${{github.ref}}
+            *.cache-from=type=gha,scope=refs/heads/main
+            *.cache-to=type=gha,scope=${{github.ref}},mode=max
 
       - name: Start services
         working-directory: ./front
