--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,7 +54,7 @@ jobs:
         run: docker compose exec -T php bin/console -e test doctrine:database:create
 
       - name: Generate migrations files
-        run: docker compose exec -T php bin/console -e test doctrine:make:migration --no-interaction
+        run: docker compose exec -T php bin/console -e test make:migration --no-interaction
 
       - name: Run migrations
         run: docker compose exec -T php bin/console -e test doctrine:migrations:migrate --no-interaction
