--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -94,13 +94,13 @@ jobs:
         run: docker-compose up --detach
 
       - name: Build
-        run: docker-compose exec node pnpm run build
+        run: docker-compose exec -T node pnpm run build
 
       - name: Install Playwright dependencies
-        run: docker-compose exec node pnpm dlx playwright install --with-deps
+        run: docker-compose exec node -T pnpm dlx playwright install --with-deps
 
       - name: Run Playwright tests
-        run: docker-compose exec node pnpm run test:e2e
+        run: docker-compose exec node -T pnpm run test:e2e
 
       - name: Run Vitest tests
-        run: docker-compose exec node pnpm run test
+        run: docker-compose exec node -T pnpm run test
