--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -90,8 +90,7 @@ jobs:
             *.cache-to=type=gha,scope=${{github.ref}},mode=max
 
       - name: Start services
-        working-directory: ./front
-        run: docker-compose up --detach
+        run: docker compose up --wait --no-build
 
       - name: Build
         run: docker-compose exec -T node pnpm run build
