--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -81,6 +81,7 @@ jobs:
         with:
           workdir: front
           pull: true
+          targets: builder
           load: true
           files: |
             docker-compose.yml
@@ -90,7 +91,6 @@ jobs:
             *.cache-to=type=gha,scope=${{github.ref}},mode=max
 
       - name: Start services
-        working-directory: ./front
         run: docker compose up --wait --no-build
 
       - name: Build
