--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -90,7 +90,7 @@ jobs:
             *.cache-to=type=gha,scope=${{github.ref}},mode=max
 
       - name: Start services
-        run: docker compose up --wait
+        run: docker compose up --wait --build
 
       - name: Build
         run: docker-compose exec -T node pnpm run build
