--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -92,14 +92,17 @@ jobs:
       - name: Start services
         run: docker compose up --wait --build
 
+      - name: Docker logs
+        run: docker logs node
+
       - name: Build
-        run: docker-compose exec -T node pnpm run build
+        run: docker compose exec -T node pnpm run build
 
       - name: Install Playwright dependencies
-        run: docker-compose exec node -T pnpm dlx playwright install --with-deps
+        run: docker compose exec node -T pnpm dlx playwright install --with-deps
 
       - name: Run Playwright tests
-        run: docker-compose exec node -T pnpm run test:e2e
+        run: docker compose exec node -T pnpm run test:e2e
 
       - name: Run Vitest tests
-        run: docker-compose exec node -T pnpm run test
+        run: docker compose exec node -T pnpm run test
