--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -90,9 +90,11 @@ jobs:
             *.cache-to=type=gha,scope=${{github.ref}},mode=max
 
       - name: Start services
+        workdir: front
         run: docker compose up --wait --build
 
       - name: Docker logs
+        workdir: front
         run: docker logs node
 
       - name: Build
