--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -97,7 +97,7 @@ jobs:
         run: docker ps -a
 
       - name: Docker logs
-        working-directory: front
+        working-directory: ./front
         run: docker logs node
 
       - name: Build
