--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -93,12 +93,8 @@ jobs:
         working-directory: front
         run: docker compose up --wait --build
 
-      - name: List dockers containers
-        run: docker ps -a
-
-      - name: Docker logs
-        working-directory: ./front
-        run: docker logs front-node
+      - name: Install dependencies
+        run: docker compose exec -T node pnpm install
 
       - name: Build
         run: docker compose exec -T node pnpm run build
