--- a/front/package.json
+++ b/front/package.json
@@ -18,21 +18,22 @@
     "axios": "^1.5.1",
     "next": "14.0.2",
     "prop-types": "^15.8.1",
+    "flowbite": "^2.0.0",
+    "flowbite-react": "^0.6.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-email": "1.9.5",
-    "react-toastify": "^9.0.8"
+    "react-email": "1.9.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
     "@types/node": "^20.8.6",
     "@vitejs/plugin-react": "^4.1.0",
-    "autoprefixer": "^10",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "jsdom": "^22.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "vitest": "^0.34.6"
   }
 }
