--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "@react-email/tailwind": "^0.0.12",
     "axios": "^1.5.1",
     "next": "14.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "1.9.5",
