add user checker

--- a/back/api/config/packages/security.yaml
+++ b/back/api/config/packages/security.yaml
@@ -6,7 +6,9 @@ security:
     providers:
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
-            id: App\Security\UserProvider
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         auth_routes:
             pattern: ^/auth/register
@@ -16,9 +18,10 @@ security:
             security: false
         main:
             lazy: true
-            provider: app_user_provider
             stateless: true
             entry_point: jwt
+            provider: app_user_provider
+            user_checker: App\Security\UserIsActiveChecker
             json_login:
                 check_path: /auth/login  # The name in routes.yaml is enough for mapping
                 username_path: email
