add media entity

--- a/back/api/frankenphp/Caddyfile
+++ b/back/api/frankenphp/Caddyfile
@@ -27,11 +27,12 @@ log {
 @pwa expression `(
         header({'Accept': '*text/html*'})
         && !path(
-            '/docs*', '/graphql*', '/bundles*', '/contexts*', '/_profiler*', '/_wdt*',
+            '/docs*', '/media*', '/graphql*', '/bundles*', '/contexts*', '/_profiler*', '/_wdt*',
             '*.json*', '*.html', '*.csv', '*.yml', '*.yaml', '*.xml'
         )
     )
     || path('/favicon.ico', '/manifest.json', '/robots.txt', '/_next*', '/sitemap*')`
+
 
 route {
 	root * /app/public
