--- a/back/api/composer.json
+++ b/back/api/composer.json
@@ -30,7 +30,8 @@
         "symfony/serializer": "6.3.*",
         "symfony/twig-bundle": "6.3.*",
         "symfony/validator": "6.3.*",
-        "symfony/yaml": "6.3.*"
+        "symfony/yaml": "6.3.*",
+        "vich/uploader-bundle": "^2.2"
     },
     "require-dev": {
         "api-platform/schema-generator": "^5.0",
