--- a/back/api/config/services.yaml
+++ b/back/api/config/services.yaml
@@ -22,9 +22,14 @@ services:
     App\State\UserPasswordHasher:
         bind:
             $processor: '@api_platform.doctrine.orm.state.persist_processor'
+    App\Encoder\MultipartDecoder:
+        tags:
+            - { name: 'serializer.encoder' }
+    App\Serializer\UploadedFileDenormalizer:
+        tags:
+            - { name: 'serializer.normalizer' }
     App\Serializer\InjectUserInfoDenormalizer:
         tags:
             - { name: 'serializer.normalizer' }
-
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
