--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
     "i18next": "^23.7.6",
+    "next-i18next": "^15.0.0",
     "next": "14.0.3",
     "next-i18next": "^15.0.0",
     "react": "^18",
