--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.1",
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
+    "js-cookie": "^3.0.5",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
