--- a/front/package.json
+++ b/front/package.json
@@ -18,10 +18,10 @@
     "axios": "^1.5.1",
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
+    "js-cookie": "^3.0.5",
     "i18next": "^23.7.6",
     "next-i18next": "^15.0.0",
     "next": "14.0.3",
-    "next-i18next": "^15.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "1.9.5",
