--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -100,10 +100,10 @@ jobs:
         run: docker compose exec -T node pnpm run build
 
       - name: Install Playwright dependencies
-        run: docker compose exec node pnpm dlx playwright install --with-deps
+        run: docker compose exec -T node pnpm dlx playwright install --with-deps
 
       - name: Run Playwright tests
-        run: docker compose exec node -T pnpm run test:e2e
+        run: docker compose exec -T node pnpm run test:e2e
 
       - name: Run Vitest tests
-        run: docker compose exec node -T pnpm run test
+        run: docker compose exec -T node pnpm run test
