--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -104,6 +104,8 @@ jobs:
 
       - name: Run Playwright tests
         run: docker compose exec -T node pnpm run test:e2e
+        env:
+          CI: 'true'
 
       - name: Run Vitest tests
         run: docker compose exec -T node pnpm run test
