--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -103,9 +103,7 @@ jobs:
         run: docker compose exec -T node pnpm dlx playwright install --with-deps
 
       - name: Run Playwright tests
-        run: docker compose exec -T node pnpm run test:e2e
-        env:
-          CI: 1
+        run: docker compose exec -T node pnpm run test:e2e CI=1
 
       - name: Run Vitest tests
         run: docker compose exec -T node pnpm run test
