--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -92,6 +92,8 @@ jobs:
       - name: Start services
         working-directory: front
         run: docker compose up --wait --build
+        env:
+          NODE_ENV: production
 
       - name: Install dependencies
         run: docker compose exec -T node pnpm install
