--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "i18next": "^23.7.6",
     "next": "14.0.3",
     "next-i18next": "^15.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "1.9.5",
