--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,9 @@
     "dev:export-email": "email export --dir ../back/api/templates/mails"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.28.2",
+    "@editorjs/header": "^2.8.1",
+    "@editorjs/list": "^1.9.0",
     "@react-email/components": "0.0.11",
     "@react-email/tailwind": "^0.0.12",
     "axios": "^1.5.1",
