--- a/back/api/config/packages/framework.yaml
+++ b/back/api/config/packages/framework.yaml
@@ -4,6 +4,7 @@ framework:
     #csrf_protection: true
     http_method_override: false
     handle_all_throwables: true
+    annotations: false
  
     trusted_proxies: '%env(TRUSTED_PROXIES)%'
     trusted_hosts: '%env(TRUSTED_HOSTS)%'
@@ -16,7 +17,6 @@ framework:
     #    handler_id: null
     #    cookie_secure: auto
     #    cookie_samesite: lax
-    #    storage_factory_id: session.storage.factory.native
 
     #esi: true
     #fragments: true
