--- a/front/package.json
+++ b/front/package.json
@@ -24,7 +24,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-email": "1.9.5",
-    "react-i18next": "^13.4.1"
+    "react-i18next": "^13.4.1",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
