--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -53,6 +53,17 @@ jobs:
       - name: Run PHPUnit tests
         run: docker compose exec -T php bin/phpunit
 
+      - name: Fail back
+        if: failure()
+        uses: appleboy/discord-action@master
+        with:
+          webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID_FAIL }}
+          webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN_FAIL }}
+          color: "#ff0000"
+          username: "Review Pelo Bot"
+          avatar_url: "https://cdn.discordapp.com/attachments/1151784787057594428/1152126946789052436/image.png?ex=65321c55&is=651fa755&hm=88684c0f5b1c9aa5251f160c5a649525f98d047644cc3e81e64fa5f2b4681049&"
+          message: ":loudspeaker: **Fail ci back in PR: ${{ github.event.pull_request.title }}** : ${{ github.event.pull_request.html_url }} @here"
+
   ci-front:
     runs-on: ubuntu-latest
     defaults:
@@ -107,3 +118,15 @@ jobs:
 
       - name: Run Vitest tests
         run: docker compose exec -T node pnpm run test --no-watch
+
+      - name: Fail front
+        if: failure()
+        uses: appleboy/discord-action@master
+        with:
+          webhook_id: ${{ secrets.DISCORD_WEBHOOK_ID_FAIL }}
+          webhook_token: ${{ secrets.DISCORD_WEBHOOK_TOKEN_FAIL }}
+          color: "#ff0000"
+          username: "Review Pelo Bot"
+          avatar_url: "https://cdn.discordapp.com/attachments/1151784787057594428/1152126946789052436/image.png?ex=65321c55&is=651fa755&hm=88684c0f5b1c9aa5251f160c5a649525f98d047644cc3e81e64fa5f2b4681049&"
+          message: ":loudspeaker: **Fail ci front in PR: ${{ github.event.pull_request.title }}** : ${{ github.event.pull_request.html_url }} @here"
+
