--- a/back/api/composer.json
+++ b/back/api/composer.json
@@ -5,7 +5,7 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/core": "^3.2.7",
+        "api-platform/core": "^3.2@beta",
         "doctrine/doctrine-bundle": "^2.10",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.16",
@@ -95,7 +95,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.4.*",
+            "require": "6.3.*",
             "docker": false
         }
     }
