--- a/back/api/config/packages/framework.yaml
+++ b/back/api/config/packages/framework.yaml
@@ -4,7 +4,6 @@ framework:
     #csrf_protection: true
     http_method_override: false
     handle_all_throwables: true
-    annotations: false
  
     trusted_proxies: '%env(TRUSTED_PROXIES)%'
     trusted_hosts: '%env(TRUSTED_HOSTS)%'
@@ -17,6 +16,7 @@ framework:
     #    handler_id: null
     #    cookie_secure: auto
     #    cookie_samesite: lax
+    #    storage_factory_id: session.storage.factory.native
 
     #esi: true
     #fragments: true
