--- a/front/package.json
+++ b/front/package.json
@@ -8,16 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "test": "vitest",
-    "test:e2e": "playwright test",
-    "dev:mail": "email dev --dir src/emails --port 8080",
-    "dev:export-email": "email export --dir ../back/api/templates/mails"
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@editorjs/editorjs": "^2.28.2",
     "@editorjs/header": "^2.8.1",
     "@editorjs/list": "^1.9.0",
-    "@react-email/components": "0.0.11",
-    "@react-email/tailwind": "^0.0.12",
     "axios": "^1.5.1",
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.7.0",
@@ -27,7 +23,6 @@
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-email": "1.9.5",
     "react-i18next": "^13.4.1"
   },
   "devDependencies": {
