Fix package json name and delete .DS_Store

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Challenge-Semestriel-1-5IW",
+  "name": "challengesemestriel15iw",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
