--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,13 +56,9 @@ jobs:
   ci-front:
     runs-on: ubuntu-latest
     needs: ci-back
-    strategy:
-      matrix:
-        node-version: [ 21 ]
     defaults:
       run:
         working-directory: front
-
 
     steps:
       - name: Checkout
@@ -76,11 +72,24 @@ jobs:
       - name: Set up npm
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 20
           cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm install
+
+      - name: Get pnpm store directory
+        id: pnpm-cache
+        run: |
+          echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
+
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
 
       - name: Build
         run: pnpm run build
@@ -89,7 +98,7 @@ jobs:
         run: pnpm dlx playwright install --with-deps
 
       - name: Run Playwright tests
-        run: pnpm run test:e2e CI=1
+        run: pnpm run test:e2e
 
       - name: Run Vitest tests
         run: pnpm run test --no-watch
