feat(service) : add picture on a service

--- a/back/api/config/services.yaml
+++ b/back/api/config/services.yaml
@@ -26,6 +26,10 @@ services:
         tags:
             - { name: 'serializer.normalizer' }
 
+    # App\Serializer\StringToFloatNormalizer:
+    #     tags:
+    #         - { name: 'serializer.denormalizer' }
+
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
