feat(user) : add email verification

--- a/back/api/config/packages/security.yaml
+++ b/back/api/config/packages/security.yaml
@@ -13,6 +13,9 @@ security:
         auth_routes:
             pattern: ^/auth/register
             security: false
+        # confirm_email:
+        #     pattern: ^/confirm-email/[a-f0-9]*
+        #     security: false
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
@@ -44,6 +47,8 @@ security:
         - { path: ^/$, roles: PUBLIC_ACCESS } # Allows accessing the Swagger UI
         - { path: ^/docs, roles: PUBLIC_ACCESS } # Allows accessing the Swagger UI docs
         - { path: ^/auth, roles: PUBLIC_ACCESS }
+        # - { path: ^/confirm-email/[a-f0-9]+$, roles: PUBLIC_ACCESS}
+        # - { path: ^/confirm-email, roles: PUBLIC_ACCESS}
         - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
         
     role_hierarchy:
