Feat: Bump dependencies and update script for playwright

--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -93,5 +93,17 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+
+      - name: Cache Playwright dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-playwright-
+
+      - name: Install Playwright dependencies
+        run: pnpm dlx playwright install --with-deps
+
       - name: Run Playwright tests
         run: npx playwright test
