Feat: Remove Api Key from github repo

--- a/front/docker-compose.yml
+++ b/front/docker-compose.yml
@@ -6,7 +6,10 @@ services:
             context: .
             dockerfile: Dockerfile
             target: dev
+        container_name: front
         ports:
             - '8080:8080'
         volumes:
             - ./:/app
+        environment:
+            - .env
