--- a/.github/workflows/cd-back.yaml
+++ b/.github/workflows/cd-back.yaml
@@ -28,6 +28,7 @@ jobs:
           push: true
           tags: ossama98/monapp_php:latest
           target: php
+          working-directory: ./test
 
       - name: Build and push Server Docker image
         uses: docker/build-push-action@v2
